--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     
     <!-- Footer -->
     <footer class="text-center text-gray-500 py-4">
-      <p>TaskFlow - iOS 17-inspired Task Manager © 2025</p>
+      <p>TaskFlow - Task Manager © 2025</p>
     </footer>
     
     <!-- Snackbar -->
@@ -1194,4 +1194,5 @@
     });
   </script>
 </body>
+
 </html>
